--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
  </head>
  <body>
   <header>
-   <img alt="Logo Radio Poppet" class="logo" src="radio_poppet_transparent_clean.png"/>
+   <img alt="Logo Radio Poppet" class="logo" src="logo.png"/>
    <h1>
     RADIO POPPET
    </h1>
@@ -165,6 +165,16 @@
     <source src="http://178.170.116.162:8000/stream" type="audio/mpeg">
     Votre navigateur ne supporte pas le lecteur audio.
    </audio>
+<!-- Bouton spécial iPhone (ouvre le lecteur iOS, sans casser le site) -->
+<div style="margin-top:18px;">
+  <a href="http://178.170.116.162:8000/stream" target="_blank" rel="noopener"
+     style="display:inline-block;padding:12px 18px;border-radius:14px;
+            background:rgba(255,255,255,0.18);color:#fff;font-weight:700;
+            text-decoration:none;border:1px solid rgba(255,255,255,0.25);">
+    ▶ Écouter sur iPhone
+  </a>
+</div>
+
    <div class="install">
     <a href="#" rel="noopener" target="_blank">
      🍎 Installer sur iPhone (App Store)
@@ -243,6 +253,27 @@ function installPWA() {
     📱 Installer la radio sur mon téléphone
   </button>
 </div>
+
+
+<!-- Smart Radio Player (iPhone compatible fallback) -->
+<div style="max-width:600px;margin:20px auto;">
+  <audio id="radioPlayer" controls playsinline preload="none" style="width:100%;">
+    <source src="https://radiopoppet.fr/stream" type="audio/mpeg">
+    Votre navigateur ne supporte pas l'audio.
+  </audio>
+</div>
+<script>
+(function(){
+  const player = document.getElementById('radioPlayer');
+  player.addEventListener('error', function(){
+    try {
+      player.src = 'http://178.170.116.162:8000/stream';
+      player.load();
+      player.play();
+    } catch(e){}
+  });
+})();
+</script>
 
 </body>
 </html>
